2009-02-11 tdb
 * Unicode Fixes:
 	- Return bytes from LibXML & DOM nodeValue() calls
	- Send bytes via Net::Cmd (fixes wide-character warning)
	- Added utf-8 support to email headers (subject + names)
 * Changed string style to be consistent in Email.pm 

2009-02-13 tdb
 * Added support for custom OAI sets, see #3271

2009-02-18 tdb
 * Added *experimental* FTP daemon (part of Kultur)

2009-02-24 cjg
 * Fixed view group sort unicode issue.

2009-02-26 tdb
 * Fixed OAI GetRecord always returning a record, fixing #3498

2009-03-17 cjg
 * Document toolbox document add now reports document id rather than "OK"
 * Fixed bug in Field::Multi which didn't allow <help> in both the component
    and inside the field.
 * Added temporary conf settings to bin/toolbox to allow file & web import.

2008-03-24 tdb
 * Can now use Subject input component with other fields in a workflow

2009-03-27 tdb
 * Fixed to_string() calls not specifying noxmlns in Views (McSweeney)

2009-03-30 tdb
 * If a name is defined all parts must be defined (""), fixing #3483
 * Added upgrade to DB schema 3.1.2 - fix null parts of names

2009-03-30 cjg
 * Fixed some trivial warnings getting ready for a release.

2009-04-07 tdb
 * Ignore blank lines in DOI import and check for "malformed" response

2009-04-15 cjg
 * Fixed issue in update views which would cause a huge memory spike if an
    illegal view value was requested, rather than just 404.

2009-04-16 cjg
 * Added JSON support.

2009-04-16 cjg
 * Added config. options and better error handling to JSON code.

2009-04-16 cjg
 * Fixed issue with 403 in JSON, and when eprint not found.

2009-04-16 cjg
 * Fixed issue with non standard DOM in Export::JSON

2009-04-16 cjg+tmb
 * Fix for generate-on-demand of /view/foo/index.html URLs

2009-04-17 tmb
 * Added default creators_name view using new A-Z pages option
 * Bundled Unicode::Collate
 * Fixed issues with subject navigation aids on view menus
 * Fixed issues with default division and subject views config