@@ -75,9 +75,9 @@ $oai->{sets} = [
 
 # Custom sets allow you to create a specific search query related to a set
 # e.g. for the EU DRIVER conformance
-#$oai->{custom_sets} = [
-#	{ spec => "driver", name => "DRIVER", meta_fields => [ "full_text_status" ], value => "public" },
-#];
+$oai->{custom_sets} = [
+	{ spec => "driver", name => "Open Access DRIVERset", meta_fields => [ "full_text_status" ], value => "public" },
+];
 
 # Filter OAI export. If you want to stop certain records being exported
 # you can add filters here. These work the same as for a search filter.
