@@ -7947,3 +7947,6 @@ EPRINTS-3.1.2.1
  * Bundled Unicode::Collate
  * Fixed issues with subject navigation aids on view menus
  * Fixed issues with default division and subject views config
+
+2009-04-22 tmb
+ * Made OAI DRIVER set available by default
